# __misc

./: .gitignore  .gitignore.swp
Fractal/: CMakeLists.txt
Fractal/open_cl/: open_cl.h  program.cl
Fractal/rm/: rm.c  rm_ctrl_easy.c  rm_mxl.c
Graphics/ft_newton/: CMakeLists.txt  README.md
Graphics/ft_newton/resources/: settings.yaml
Graphics/ft_newton/resources/models/: cube.fbx  quad.fbx  sphere.fbx
Graphics/ft_newton/resources/prototypes/common/: camera.yaml  lights.yaml
Graphics/ft_newton/resources/prototypes/common/menu/: background.yaml  button.yaml  switch.yaml  text.yaml
Graphics/ft_newton/resources/prototypes/game/: menu.yaml
Graphics/ft_newton/resources/prototypes/test/: menu.yaml  statistics.yaml
Graphics/ft_newton/resources/prototypes/test/objects/: box.yaml  plane.yaml  sphere.yaml
Graphics/ft_newton/resources/prototypes/test/objects/complex/: box3.yaml  box3x3.yaml  box3x3x3.yaml  sphere5.yaml  sphere5x5.yaml  sphere5x5x5.yaml
Graphics/ft_newton/resources/scenes/test/: ballistics-1.yaml  ballistics-2.yaml  box-box-1.yaml  box-box-2.yaml  box.yaml  fall-1.yaml  fall-2.yaml  lot-of-boxes.yaml  lot-of-spheres.yaml  plane-box-1.yaml  plane-box-2.yaml  plane-box.yaml  sphere-box-1.yaml  sphere-box.yaml  sphere-plane.yaml  sphere-sphere-1.yaml  sphere-sphere.yaml  sphere.yaml
Graphics/ft_newton/resources/shaders/: lit.frag  lit.vert  text.frag  text.vert  unlit.frag  unlit.vert
Graphics/ft_newton/sources/main/engine/core/: Core.h
Graphics/ft_newton/sources/main/engine/core/module/: Module.h
Graphics/ft_newton/sources/main/engine/core/processor/: Processor-Environment.cpp  Processor-Modules.cpp  Processor-Scene.cpp  Processor.cpp  Processor.h
Graphics/ft_newton/sources/main/engine/core/scene/: Scene.cpp  Scene.h
Graphics/ft_newton/sources/main/engine/core/settings/: Settings.cpp  Settings.h
Graphics/ft_newton/sources/main/engine/environment/: Environment.h
Graphics/ft_newton/sources/main/engine/environment/environment/: Environment.cpp  Environment.h
Graphics/ft_newton/sources/main/engine/environment/input/: Input.cpp  Input.h
Graphics/ft_newton/sources/main/engine/environment/renderingOptions/: RenderingOptions.h
Graphics/ft_newton/sources/main/engine/environment/shader/: Shader.cpp  Shader.h
Graphics/ft_newton/sources/main/engine/environment/window/: Window.cpp  Window.h
Graphics/ft_newton/sources/main/engine/modules/base/: Base.h
Graphics/ft_newton/sources/main/engine/modules/physics/: Physics.h
Graphics/ft_newton/sources/main/engine/modules/rendering/: Rendering.h
Graphics/ft_newton/sources/main/engine/modules/ui/: UI.h
Graphics/ft_newton/sources/main/engine/tools/: Tools.h
Graphics/ft_newton/sources/main/engine/tools/color/: Color.cpp  Color.h  YamlCpp+Color.h
Graphics/ft_newton/sources/main/game/: Game.h
Graphics/ft_newton/sources/main/game/launcher/: Launcher.cpp  Launcher.h  Main.cpp
Graphics/ft_newton/sources/main/test/: Test.h
Graphics/ft_newton/sources/main/test/launcher/: Launcher.cpp  Launcher.h  Main.cpp
Graphics/ft_newton/tools/: build-project.sh  install-libraries.sh
Graphics/humangl/: CMakeLists.txt  README.md
Graphics/humangl/Resources/Configurations/: Window.yaml
Graphics/humangl/Resources/Scenes/: Main.yaml
Graphics/humangl/Resources/Shaders/: Default.frag  Default.vert
Graphics/humangl/Sources/Main/Engine/Environment/: Environment.cpp  Environment.h
Graphics/humangl/Sources/Main/Game/: Main.cpp
Graphics/humangl/Sources/Main/Game/Launcher/: Launcher.cpp  Launcher.h
Graphics/humangl/Tools/: InstallLibraries.sh
Lem-In/: CMakeLists.txt
Lem-In/libft/: .gitignore
Printf/printf_new/: CMakeLists.txt  Makefile
Printf/printf_new/ftp_buffer/: ftp_buffer_main.h
Printf/printf_new/ftp_control/: ftp_control_definition.c  ftp_control_definition.h  ftp_control_functions.c  ftp_control_functions.h  ftp_control_functor.c  ftp_control_special.c
Printf/printf_new/ftp_format_data/: ftp_format_data.c  ftp_format_data_short.c
Printf/printf_new/ftp_format_in/: ftp_format_additional.c  ftp_format_in_size.c  ftp_format_in_type.c
Printf/printf_new/ftp_format_out/: ftp_format_out.h  ftp_format_out_char.c  ftp_format_out_str.c
Printf/printf_new/ftp_format_out_real/: format_out_real_exceptions.c  ftp_format_out_real.c
Printf/printf_new/ftp_format_out_whole/: ftp_format_out_whole_out.c
QT_Text_editor/: main_window.cpp  (+3 more)
School 21/Graphics/Fdf/fdf_v1/: CMakeLists.txt
School 21/Graphics/Fdf/fdf_v1/libft/src_btree/: btree_infix.c
School 21/Graphics/Fdf/fdf_v1/libft/src_list/: list_alloc.c  list_emplace_front.c  list_last.c  list_push_back.c
School 21/Graphics/Fdf/fdf_v1/map/: map_read_utils.c
School 21/Graphics/Fdf/fdf_v1/some_math/: some_math.c
School 21/Graphics/Fdf/fdf_v1/vo/: vo_term_translate.c
Scop/: CMakeLists.txt  README.md
Scop/models/airplane/: airplane.mtl
Scop/models/earth/: earth.mtl
Scop/models/fox/: fox.mtl
Scop/models/rose/: rose.mtl
Scop/project/: main.c
Scop/project/common/: scop_OpenGL.h  scop_constant.h  scop_settings.h
Scop/project/core/: core.c  core.h  info.c
Scop/project/engine/: OpenGL_x.c  camera_x.c  engine.c  engine.h  handle_key.c  handle_x.c  loop.c  material_x.c  mesh_x.c  model_x_a.c  model_x_b.c  model_x_c.c  model_x_с.c  opengl_x.c  program_x.c  render.c  shader_x.c  texture_x_a.c  texture_x_b.c  uniform_x.c  vao_x.c  vbo_x.c
Scop/project/libft/includes/: libft_standart.h
Scop/project/math/: scop_math.h
Scop/project/math/matrix/: empty.c  identity.c  look_at.c  perspective.c  print.c  product.c  rotate_x.c  scale.c  translate.c
Scop/project/math/other/: clamp.c  degrees_to_radians.c
Scop/project/math/vector/: add.c  array.c  cross.c  div.c  dot.c  empty.c  length_x.c  max.c  min.c  mul.c  normalize.c  pack.c  print.c  rotate_x.c  sub.c  vector2.c  vector3.c  vector4.c
Scop/project/parser/: extract_directory.c  fill_x.c  generate_x.c  interim_mesh_x.c  parser.c  parser.h  read_material_x_a.c  read_material_x_b.c  read_model.c  read_model_x_a.c  read_model_x_b.c
Scop/project/resources/: fragment.glsl  vertex.glsl
(+1353 files in other folders)
